--- a/dev/skull.html
+++ b/dev/skull.html
@@ -21,10 +21,10 @@
 	</head>
 	<body onload="start3d()">
 		<div id="container_3d" style="width:100%;height:100%"/>
-		<!--
-		<audio controls>
-			<source src="media/mp3/horse.mp3" type="audio/mpeg">
+		<audio autoplay loop>
+		 <!-- <source src="media/audio/horse.ogg" type="audio/ogg"> -->
+		  <source src="media/audio/pts.mp3" type="audio/mpeg">
+		Your browser does not support the audio element.
 		</audio>
-		-->
 	</body>
 </html>
