--- a/dev/webgl_vr.html
+++ b/dev/webgl_vr.html
@@ -17,8 +17,9 @@
 
 		<script src="js/lib/three-r74/examples/js/Detector.js"></script>
 		
-		<!-- <script src="js/lib/three/examples/js/controls/OrbitControls.js"></script> -->
-		<script src="js/lib/three-r74/examples/js/controls/FirstPersonControls.js"></script>
+		<script src="js/lib/three-r74/examples/js/effects/StereoEffect.js"></script>
+		<script src="js/lib/three-r74/examples/js/controls/DeviceOrientationControls.js"></script>
+		
 	</head>
 	<body>
 		<div style="width:100%;height:100%;text-align:center">
@@ -29,11 +30,13 @@
 			var iWorldOptions = {
 				windowResize: true,
 				useControls: false,
+				useVR: true
 				//width: 860,
 				//height: 640 
 			};
 		</script>
 		<script src="js/webgl_world.js"></script>
+		<script src="js/vr_gl.js"></script>
 		
 		<script>start3d()</script>
 	</body>
