--- a/dev/skull.html
+++ b/dev/skull.html
@@ -20,40 +20,9 @@
 		<script src="js/skull.js"></script>
 	</head>
 	<body onload="start3d()">
-	
-		<script type="x-shader/x-vertex" id="rain_vs">
-			uniform float radiusX;
-			uniform float radiusZ;
-			uniform float size;
-			uniform float scale;
-			uniform float height;
-			uniform float elapsedTime;
-			uniform float speedH;
-			uniform float speedV;
-			void main() {
-				vec3 pos = position;
-				pos.x += cos((elapsedTime + position.z) * 0.25 * speedH) * radiusX;
-				pos.y = mod(pos.y - elapsedTime * speedV, height);
-				pos.z += sin((elapsedTime + position.x) * 0.25 * speedH) * radiusZ;
-				vec4 mvPosition = modelViewMatrix * vec4( pos, 1.0 );
-				gl_PointSize = size * ( scale / length( mvPosition.xyz ) );
-				gl_Position = projectionMatrix * mvPosition;
-			}
-		</script>
-		<script type="x-shader/x-fragment" id="rain_fs">
-			uniform vec3 color;
-			uniform float opacity;
-			uniform sampler2D texture;
-			void main() {
-				vec4 texColor = texture2D( texture, gl_PointCoord );
-				gl_FragColor = texColor * vec4( color, opacity );
-			}
-		</script>
-		
 		<div id="container_3d" style="width:100%;height:100%"/>
 		<audio autoplay loop>
-		 <!-- <source src="media/audio/horse.ogg" type="audio/ogg"> -->
-		  <source src="media/audio/pts.mp3" type="audio/mpeg">
+		  <source src="media/audio/pts.mp3" type="audio/mpeg"/>
 		</audio>
 	</body>
 </html>
